--- a/app/src/main/res/layout/activity_inside_exercise.xml
+++ b/app/src/main/res/layout/activity_inside_exercise.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activity.ActivityInsideExercise"
-    android:background="@color/grey">
+    android:background="@color/grey"
+    android:layoutDirection="ltr">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/actionBar"
