--- a/app/src/main/res/layout/activity_add_new_exercise.xml
+++ b/app/src/main/res/layout/activity_add_new_exercise.xml
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ededed"
     android:orientation="vertical"
-    tools:context=".Activity.AddNewExerciseActivity">
+    tools:context=".Activity.AddNewExerciseActivity"
+    android:fillViewport="true"
+    android:layoutDirection="ltr">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#ededed"
+        android:orientation="vertical"
+        >
 
 
         <RelativeLayout
@@ -27,116 +38,119 @@
         </RelativeLayout>
 
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:background="@color/md_white_1000">
-
-        <TextView
-            android:id="@+id/textView18"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:fontFamily="@font/cairo_semibold"
-            android:text="إضافة تمرين جديد"
-            android:textColor="@color/blackGrey"
-            android:textSize="16sp" />
-    </RelativeLayout>
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="170dp"
-        android:layout_marginLeft="55dp"
-        android:layout_marginRight="55dp"
-        android:layout_marginTop="30dp"
-        >
-
-        <VideoView
-            android:id="@+id/videoViewNewEx"
-            android:layout_width="137dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="left"
-        />
-        <TextView
-            android:id="@+id/addVid"
-            android:layout_width="137dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="left"
-            />
-        <ImageView
-            android:id="@+id/imageViewNewEx"
-            android:layout_width="137dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/addpic"
-            android:layout_gravity="right"/>
-
-
-    </android.support.v7.widget.CardView>
-    <EditText
-        android:id="@+id/txtExName"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/custom_edit_text_white"
-        android:ems="10"
-        android:gravity="center"
-        android:hint="اسم التمرين"
-        android:inputType="textPersonName" />
-    <RelativeLayout
-        android:id="@+id/relaSpinner1"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:background="@drawable/custom_spinner_white">
-
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="12dp"
-            android:layout_marginRight="12dp"
-            app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp" />
-
-        <Spinner
-            android:id="@+id/spinnerMu"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_gravity="center"
-            android:layout_marginRight="32dp"
-            android:background="#00000000"
+            android:layout_height="35dp"
+            android:background="@color/md_white_1000">
+
+            <TextView
+                android:id="@+id/textView18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:fontFamily="@font/cairo_semibold"
+                android:text="إضافة تمرين جديد"
+                android:textColor="@color/blackGrey"
+                android:textSize="16sp" />
+        </RelativeLayout>
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="170dp"
+            android:layout_marginLeft="55dp"
+            android:layout_marginRight="55dp"
+            android:layout_marginTop="30dp"
+            >
+
+            <VideoView
+                android:id="@+id/videoViewNewEx"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="left"
+                />
+            <TextView
+                android:id="@+id/addVid"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="left"
+                />
+
+            <ImageView
+                android:id="@+id/imageViewNewEx"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="right"
+                android:background="@drawable/addpic" />
+
+
+        </android.support.v7.widget.CardView>
+        <EditText
+            android:id="@+id/txtExName"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/custom_edit_text_white"
+            android:ems="10"
             android:gravity="center"
-            android:spinnerMode="dropdown" />
-    </RelativeLayout>
+            android:hint="اسم التمرين"
+            android:inputType="textPersonName" />
+        <RelativeLayout
+            android:id="@+id/relaSpinner1"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:background="@drawable/custom_spinner_white">
 
-    <Button
-        android:id="@+id/saveNewExBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:backgroundTint="@color/scifitBlue"
-        android:text="إضافة تمرين جديد"
-        android:textColor="@color/md_white_1000" />
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="12dp"
+                android:layout_marginRight="12dp"
+                app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp" />
 
-    <Button
-        android:id="@+id/saveNewExForAllBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="21dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:backgroundTint="@color/scifitRed"
-        android:text="إضافة تمرين عام"
-        android:textColor="@color/md_white_1000" />
-</LinearLayout>
+            <Spinner
+                android:id="@+id/spinnerMu"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_gravity="center"
+                android:layout_marginRight="32dp"
+                android:background="#00000000"
+                android:gravity="center"
+                android:spinnerMode="dropdown" />
+        </RelativeLayout>
+
+        <Button
+            android:id="@+id/saveNewExBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:backgroundTint="@color/scifitBlue"
+            android:text="إضافة تمرين جديد"
+            android:textColor="@color/md_white_1000" />
+
+        <Button
+            android:id="@+id/saveNewExForAllBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="21dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:backgroundTint="@color/scifitRed"
+            android:text="إضافة تمرين عام"
+            android:textColor="@color/md_white_1000" />
+    </LinearLayout>
+</ScrollView>
+
