--- a/app/src/main/res/layout/activity_meal_ingr.xml
+++ b/app/src/main/res/layout/activity_meal_ingr.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.MealIngrActivity">
+    tools:context=".Activity.MealIngrActivity"
+    android:layoutDirection="ltr">
 
     // هذي اللي تسوي البار اللي فوق
 
@@ -85,7 +86,7 @@
             <ImageView
                 android:id="@+id/mealimg"
                 android:layout_width="match_parent"
-                android:layout_height="124dp"
+                android:layout_height="match_parent"
                 android:src="@drawable/addpic" />
 
             <ProgressBar
