--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.ProfileActivity">
+    tools:context=".Activity.ProfileActivity"
+    android:layoutDirection="ltr">
 
     <ImageView
         android:id="@+id/ivProfilePic"
