--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,116 +8,126 @@
     android:background="@drawable/vegowall"
     tools:context=".Activity.SignupActivity"
     android:theme="@style/AppThemeNo"
-    android:id="@+id/relativeLayout2">
+    android:id="@+id/relativeLayout2"
+    android:fillViewport="true"
+    android:layoutDirection="ltr"
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="271dp"
-        android:layout_height="122dp"
-        android:layout_marginTop="96dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo_welcome_screen" />
+    >
 
-    <TextView
-        android:id="@+id/signinTxt"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="34dp"
-        android:layout_marginBottom="4dp"
-        android:clickable="true"
-        android:text="لديك حساب؟ تسجيل الدخول"
-        android:textAlignment="center"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/signupBtn"
-        android:layout_width="331dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
-        android:layout_marginTop="8dp"
-        android:backgroundTint="#cf0545"
-        android:gravity="center"
-        android:text="تسجيل مستخدم جديد"
-        android:textColor="#ffff"
-        app:layout_constraintBottom_toTopOf="@+id/signinTxt"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userNameTxt"
-        app:layout_constraintVertical_bias="0.785" />
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="271dp"
+            android:layout_height="122dp"
+            android:layout_marginTop="96dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/logo_welcome_screen" />
 
-    <EditText
-        android:id="@+id/emailTxt"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
-        android:layout_marginTop="68dp"
-        android:background="@drawable/custom_edit_text"
-        android:drawablePadding="10dp"
-        android:drawableRight="@drawable/arroba3"
-        android:ems="10"
-        android:gravity="right"
-        android:hint="البريد الإلكتروني"
-        android:inputType="textEmailAddress"
-        android:paddingBottom="7dp"
-        android:paddingRight="10dp"
-        android:paddingTop="8.5dp"
-        android:textSize="16dp"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        <TextView
+            android:id="@+id/signinTxt"
+            android:layout_width="match_parent"
+            android:layout_height="34dp"
+            android:layout_marginBottom="4dp"
+            android:clickable="true"
+            android:text="لديك حساب؟ تسجيل الدخول"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
-        android:id="@+id/userNameTxt"
-        android:layout_width="match_parent"
-        android:layout_height="42dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/custom_edit_text"
-        android:ems="10"
-        android:textSize="16dp"
-        android:gravity="right"
-        android:hint="تأكيد كلمة المرور"
-        android:drawableRight="@drawable/lock"
-        android:drawablePadding="10dp"
-        android:inputType="textPassword"
-        android:paddingBottom="7dp"
-        android:paddingRight="7dp"
-        android:paddingTop="8.5dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordTxt" />
+        <Button
+            android:id="@+id/signupBtn"
+            android:layout_width="331dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="40dp"
+            android:layout_marginTop="8dp"
+            android:backgroundTint="#cf0545"
+            android:gravity="center"
+            android:text="تسجيل مستخدم جديد"
+            android:textColor="#ffff"
+            app:layout_constraintBottom_toTopOf="@+id/signinTxt"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/userNameTxt"
+            app:layout_constraintVertical_bias="0.785" />
 
-    <EditText
-        android:id="@+id/passwordTxt"
-        android:layout_width="match_parent"
-        android:layout_height="42dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/custom_edit_text"
-        android:ems="10"
-        android:textSize="16dp"
-        android:gravity="right"
-        android:hint="كلمة المرور"
-        android:drawableRight="@drawable/lock"
-        android:drawablePadding="10dp"
-        android:inputType="textPassword"
-        android:paddingBottom="7dp"
-        android:paddingRight="7dp"
-        android:paddingTop="8.5dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailTxt" />
+        <EditText
+            android:id="@+id/emailTxt"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginLeft="35dp"
+            android:layout_marginRight="35dp"
+            android:layout_marginTop="68dp"
+            android:background="@drawable/custom_edit_text"
+            android:drawablePadding="10dp"
+            android:drawableRight="@drawable/arroba3"
+            android:ems="10"
+            android:gravity="right"
+            android:hint="البريد الإلكتروني"
+            android:inputType="textEmailAddress"
+            android:paddingBottom="7dp"
+            android:paddingRight="10dp"
+            android:paddingTop="8.5dp"
+            android:textSize="16dp"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+
+        <EditText
+            android:id="@+id/userNameTxt"
+            android:layout_width="match_parent"
+            android:layout_height="42dp"
+            android:layout_marginLeft="35dp"
+            android:layout_marginRight="35dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/custom_edit_text"
+            android:ems="10"
+            android:textSize="16dp"
+            android:gravity="right"
+            android:hint="تأكيد كلمة المرور"
+            android:drawableRight="@drawable/lock"
+            android:drawablePadding="10dp"
+            android:inputType="textPassword"
+            android:paddingBottom="7dp"
+            android:paddingRight="7dp"
+            android:paddingTop="8.5dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/passwordTxt" />
+
+        <EditText
+            android:id="@+id/passwordTxt"
+            android:layout_width="match_parent"
+            android:layout_height="42dp"
+            android:layout_marginLeft="35dp"
+            android:layout_marginRight="35dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/custom_edit_text"
+            android:ems="10"
+            android:textSize="16dp"
+            android:gravity="right"
+            android:hint="كلمة المرور"
+            android:drawableRight="@drawable/lock"
+            android:drawablePadding="10dp"
+            android:inputType="textPassword"
+            android:paddingBottom="7dp"
+            android:paddingRight="7dp"
+            android:paddingTop="8.5dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/emailTxt" />
 
 
-</android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
