--- a/app/src/main/res/layout/card_sets_add.xml
+++ b/app/src/main/res/layout/card_sets_add.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#ededed">
+    android:background="#ededed"
+    android:layoutDirection="ltr">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
@@ -12,7 +13,7 @@
         android:layout_height="40dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="8dp" >
+        android:layout_marginTop="8dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
