--- a/app/src/main/res/layout/activity_inside_exercise.xml
+++ b/app/src/main/res/layout/activity_inside_exercise.xml
@@ -337,6 +337,10 @@
                 android:id="@+id/rv_history"
                 android:layout_width="0dp"
                 android:layout_height="35dp"
+                android:layout_marginEnd="25dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginStart="25dp"
                 android:layout_marginTop="8dp"
                 android:background="@color/blackGrey"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -356,10 +360,12 @@
 
             <RelativeLayout
                 android:id="@+id/rv_history2"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="26dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="25dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginStart="25dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/table_background"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -423,6 +429,10 @@
                 android:id="@+id/rv_insideWorkoutHistory"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="25dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginStart="25dp"
                 android:paddingBottom="70dp"
                 app:layout_constraintTop_toBottomOf="@+id/rv_history2" />
 
@@ -447,6 +457,9 @@
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
+        app:centre_button_icon="@drawable/ic_calculator"
+        app:inactive_centre_button_icon_color="@color/md_white_1000"
+        app:active_centre_button_icon_color="@color/md_white_1000"
         >
 
     </com.luseen.spacenavigation.SpaceNavigationView>
