--- a/app/src/main/res/layout/card_sets_show_free.xml
+++ b/app/src/main/res/layout/card_sets_show_free.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/grey">
+    android:background="@color/grey"
+    android:layoutDirection="ltr">
 
 
 
