--- a/app/src/main/res/layout/fragment_add_meals.xml
+++ b/app/src/main/res/layout/fragment_add_meals.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragment.AddMealsFragment"
-    android:background="#ffffff">
+    android:background="#ffffff"
+    android:layoutDirection="ltr">
     <android.support.design.widget.TabLayout
         android:id="@+id/tablayout"
         android:layout_marginRight="35dp"
