--- a/app/src/main/res/layout/fragment_add_workout.xml
+++ b/app/src/main/res/layout/fragment_add_workout.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragment.FragmentAddWorkout"
-    android:background="@color/grey">
+    android:background="@color/grey"
+    android:layoutDirection="ltr">
 
     <!-- TODO: Update blank fragment layout -->
 
