--- a/app/src/main/res/layout/fragment_diet.xml
+++ b/app/src/main/res/layout/fragment_diet.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.DietFragment">
+    tools:context=".Fragment.DietFragment"
+    android:layoutDirection="ltr">
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tablayout"
