--- a/app/src/main/res/layout/fragment_exercises.xml
+++ b/app/src/main/res/layout/fragment_exercises.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="@color/grey"
     android:orientation="vertical"
-    tools:context=".Activity.BottomNav">
+    tools:context=".Activity.BottomNav"
+    android:layoutDirection="ltr">
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tablayout"
