--- a/app/src/main/res/layout/fragment_meals_details.xml
+++ b/app/src/main/res/layout/fragment_meals_details.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".Fragment.FragmentMealsDetails">
+    tools:context=".Fragment.FragmentMealsDetails"
+    android:layoutDirection="ltr">
 
     <!-- TODO: Update blank fragment layout -->
 
