--- a/app/src/main/res/layout/fragment_track_progress_fragment_user.xml
+++ b/app/src/main/res/layout/fragment_track_progress_fragment_user.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grey"
-    android:id="@+id/scrollView">
+    android:id="@+id/scrollView"
+    android:layoutDirection="ltr">
 
     <RelativeLayout
         android:layout_width="match_parent"
