--- a/app/src/main/res/layout/list_item_genre.xml
+++ b/app/src/main/res/layout/list_item_genre.xml
@@ -4,7 +4,8 @@
     android:layout_height="@dimen/list_item_height"
     android:layout_marginBottom="8dp"
     android:layout_marginTop="8dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:layoutDirection="ltr">
 
     <RelativeLayout
         android:layout_width="match_parent"
