--- a/app/src/main/res/layout/activity_day_meals.xml
+++ b/app/src/main/res/layout/activity_day_meals.xml
@@ -55,10 +55,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/mealrecycler"
         android:layout_width="match_parent"
-        android:layout_height="659dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/daytv" />
 
 
 </RelativeLayout>
