--- a/app/src/main/res/layout/days_adapter_exercise.xml
+++ b/app/src/main/res/layout/days_adapter_exercise.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#ededed">
+    android:background="#ededed"
+    >
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
@@ -24,28 +25,31 @@
                 android:id="@+id/workoutCount"
                 android:layout_width="32dp"
                 android:layout_height="39dp"
-                android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:layout_marginStart="118dp"
-                app:srcCompat="@drawable/workoutcount" />
+                android:layout_toStartOf="@+id/txtCals"
+                app:srcCompat="@drawable/workoutcount"
+                android:layout_toLeftOf="@+id/txtCals" />
 
-            <ImageView
-                android:id="@+id/calsIcon"
-                android:layout_width="32dp"
-                android:layout_height="39dp"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="131dp"
-                app:srcCompat="@drawable/mouscle" />
+            <!--<ImageView-->
+                <!--android:id="@+id/calsIcon"-->
+                <!--android:layout_width="32dp"-->
+                <!--android:layout_height="39dp"-->
+                <!--android:layout_alignParentEnd="true"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:layout_marginEnd="131dp"-->
+                <!--app:srcCompat="@drawable/mouscle" />-->
 
             <TextView
                 android:id="@+id/txtCount"
-                android:layout_width="113dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
+                android:layout_marginStart="41dp"
                 android:text="عدد التمارين"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="41dp" />
 
             <TextView
                 android:id="@+id/txtCals"
@@ -62,8 +66,11 @@
                 android:layout_height="29dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="19dp"
-                app:srcCompat="@drawable/icons_calendar_px_" />
+                android:layout_marginEnd="45dp"
+
+                app:srcCompat="@drawable/icons_calendar_px_"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="45dp" />
 
             <TextView
                 android:id="@+id/txtDay"
@@ -71,9 +78,11 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="59dp"
+                android:layout_marginEnd="86dp"
                 android:text="يوم 1"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="86dp" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </RelativeLayout>
