--- a/app/src/main/res/layout/fragment_add_meals.xml
+++ b/app/src/main/res/layout/fragment_add_meals.xml
@@ -676,8 +676,8 @@
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
                         android:layout_alignParentTop="true"
-                        android:layout_marginEnd="58dp"
-                        android:layout_marginRight="60dp"
+                        android:layout_marginEnd="70dp"
+                        android:layout_marginRight="70dp"
                         android:layout_centerVertical="true"
                         android:text="نوع الغذاء"
                         android:textColor="#ffffff" />
@@ -710,20 +710,18 @@
                         android:layout_marginLeft="44dp" />
                 </RelativeLayout>
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rv_mealIngr"
-                    android:layout_below="@+id/rl_meals"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
 
-                </android.support.v7.widget.RecyclerView>
 
             </RelativeLayout>
-
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_mealIngr"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="25dp"/>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginVertical="15dp">
+                >
 
                 <RelativeLayout
                     android:id="@+id/rl_mealsDet"
@@ -761,15 +759,14 @@
                 </RelativeLayout>
 
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rv_mealDet"
-                    android:layout_below="@+id/rl_mealsDet"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
 
-                </android.support.v7.widget.RecyclerView>
 
             </RelativeLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_mealDet"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="25dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -803,7 +800,7 @@
                     android:layout_weight="1"
                     android:backgroundTint="@color/scifitBlue"
                     android:textColor="@color/md_white_1000"
-                    android:text="إضافة وجبة جديدة"></Button>
+                    android:text="إضافة وجبة جديدة" />
 
             </LinearLayout>
 
