--- a/app/src/main/res/layout/fragment_meal_ing.xml
+++ b/app/src/main/res/layout/fragment_meal_ing.xml
@@ -62,8 +62,8 @@ tools:context=".Fragment.FragmentAddMealDetailes">
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:layout_marginEnd="58dp"
-            android:layout_marginRight="60dp"
+            android:layout_marginEnd="70dp"
+            android:layout_marginRight="70dp"
             android:layout_centerVertical="true"
             android:text="نوع الغذاء"
             android:textColor="#ffffff" />
@@ -100,6 +100,7 @@ tools:context=".Fragment.FragmentAddMealDetailes">
         android:id="@+id/recyclerMealIngs"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginHorizontal="25dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp">
 
