--- a/app/src/main/res/layout/fragment_meals_details.xml
+++ b/app/src/main/res/layout/fragment_meals_details.xml
@@ -50,11 +50,11 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginEnd="55dp"
+                android:layout_marginEnd="60dp"
                 android:layout_centerVertical="true"
                 android:text="العناصر الغذائية"
                 android:textColor="#ffffff"
-                android:layout_marginRight="55dp" />
+                android:layout_marginRight="60dp" />
 
             <TextView
                 android:id="@+id/totalcals"
@@ -74,6 +74,7 @@
             android:id="@+id/recyclerMealDetailesElements"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginHorizontal="25dp"
             android:layout_marginBottom="20dp"
             android:layout_marginTop="7dp">
 
