--- a/app/src/main/res/layout/meal_card_view_text_view.xml
+++ b/app/src/main/res/layout/meal_card_view_text_view.xml
@@ -10,10 +10,7 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp" >
 
         <RelativeLayout
@@ -23,34 +20,36 @@
 
             <TextView
                 android:id="@+id/txtQuantity"
-                android:layout_width="68dp"
+                android:layout_width="102dp"
                 android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="51dp"
+                android:layout_marginEnd="200dp"
+                android:layout_marginLeft="35dp"
+                android:layout_marginRight="200dp"
+                android:layout_marginStart="35dp"
                 android:layout_marginVertical="5dp"
                 android:ems="10"
                 android:gravity="center"
-                android:inputType="number"
                 android:textAlignment="center"
-                android:textSize="14sp"
-                android:layout_marginLeft="51dp"
-                android:layout_alignParentLeft="true" />
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/txtIngr"
-                android:layout_width="140dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginEnd="28dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginLeft="170dp"
                 android:layout_marginVertical="5dp"
                 android:ems="10"
-                android:gravity="center"
                 android:inputType="textPersonName"
                 android:textAlignment="center"
-                android:layout_marginRight="28dp"
-                android:layout_alignParentRight="true" />
+                android:layout_marginRight="15dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="170dp" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
