--- a/app/src/main/res/layout/meals_list.xml
+++ b/app/src/main/res/layout/meals_list.xml
@@ -5,14 +5,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     >
 
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:id="@+id/cardViewMeals"
-        android:layout_height="200dp"
+        android:layout_height="210dp"
         app:cardCornerRadius="5dp"
         app:cardElevation="10dp"
         android:layout_marginVertical="5dp"
@@ -35,6 +35,7 @@
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
+                android:layout_marginTop="10dp"
                 android:layout_height="170dp"
                 android:scaleType="centerCrop" />
 
@@ -50,15 +51,18 @@
                 android:layout_marginRight="53dp" />
 
             <ImageView
+                android:id="@+id/calIC"
                 android:layout_width="26dp"
                 android:layout_height="27dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="113dp"
+                android:layout_marginStart="116dp"
                 android:paddingBottom="3dp"
+                android:layout_toRightOf="@id/textViewShortDesc"
                 android:src="@drawable/calories"
                 android:layout_alignParentLeft="true"
-                android:layout_marginLeft="113dp" />
+                android:layout_marginLeft="116dp"
+                android:layout_toEndOf="@id/textViewShortDesc" />
 
             <TextView
                 android:id="@+id/textViewShortDesc"
@@ -66,11 +70,11 @@
                 android:layout_height="30dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="50dp"
+                android:layout_marginStart="35dp"
                 android:gravity="center_vertical"
                 android:text="Card Title"
                 android:layout_alignParentLeft="true"
-                android:layout_marginLeft="50dp" />
+                android:layout_marginLeft="35dp" />
 
             <TextView
                 android:id="@+id/textViewTitle"
