--- a/app/src/main/res/layout/their_message.xml
+++ b/app/src/main/res/layout/their_message.xml
@@ -7,7 +7,7 @@ android:paddingLeft="15dp"
 android:paddingRight="60dp"
 android:clipToPadding="false">
 
-<View
+<ImageView
     android:id="@+id/avatar"
     android:layout_marginTop="50dp"
     android:layout_alignParentLeft="true"
